# wgsuite

./: .gitignore  Cargo.toml  README.md
dashboard/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/components/: AddUserForm.tsx  ClientsTable.tsx  ProgressBarMax.tsx
wgbot/: Cargo.toml  README.md
wgbot/src/: commands.rs  macros.rs  main.rs
wghttp/: Cargo.toml  README.md
wghttp/src/: boot.rs  clients.rs  main.rs
wglib/: Cargo.toml  README.md
wglib/src/: actions.rs  base64.rs  crypto.rs  lib.rs  metrics.rs
wglib/src/model/: client.rs  server.rs
wgmetrics/: Cargo.toml
wgmetrics/src/: main.rs
wgtool/: Cargo.toml  README.md
wgtool/src/: actions.rs  commands.rs  defaults.rs  main.rs  utils.rs
