[package]
name = "wghttp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6"
clap = { version = "4", features = ["derive"] }
serde = "1"
sudo = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4", features = ["cors"] }
wglib = { path = "../wglib" }
